intel/bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/log.txt
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:28:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:34:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:40:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:46:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:52:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:58:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:64:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:70:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:76:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:82:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:88:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:94:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:100:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:106:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:112:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:118:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:124:20: error: default initialization of an object of const type 'const smallfelem' (aka 'int *const')
  const smallfelem small1;
                   ^
                          = nullptr
bench_214/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:125:20: error: default initialization of an object of const type 'const smallfelem' (aka 'int *const')
  const smallfelem small2;
                   ^
                          = nullptr
16 warnings and 2 errors generated.
HLS FPGA Parse FAILED.
